--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "df2b8ab3",
    "metadata": {},
    "outputs": [
@@ -5401,7 +5401,7 @@
     "# create a stacked bar chart for GDP, by region\n",
     "fig = px.bar(gdp_df, x='Region', \n",
     "             y=GDP_COL_NAME, color='Country', \n",
-    "             title='GDP by Country and Region, in \"trillions\" (thousands of millions)', \n",
+    "             title='GDP by Country and Region, in \"trillions\" (millions of millions)', \n",
     "             barmode='relative')\n",
     "\n",
     "# For copy to github pages\n",
